--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Cousine" rel="stylesheet" type="text/css">
-    <title>cellf</title>
+    <title>Cellf</title>
     <meta charset="utf-8">
     <meta name="author" content="Dan Motzenbecker">
   </head>
