added meta description

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,6 +6,7 @@
     <title>Cellf</title>
     <meta charset="utf-8">
     <meta name="author" content="Dan Motzenbecker">
+    <meta name="description" content="Cellf is a game of reflection in Clojure">
   </head>
   <body>
     <div id="app"></div>
