--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Cousine" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Cousine" rel="stylesheet" type="text/css">
     <title>Cellf</title>
     <meta charset="utf-8">
     <meta name="author" content="Dan Motzenbecker">
