--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <script src="js/gif.js"></script>
     <script src="js/cellf.min.js"></script>
     <script>
+      if (window.location.protocol !== 'https:' && window.location.hostname !== 'localhost') {
+        window.location.href = 'https://rawgit.com/dmotz/cellf/gh-pages/index.html';
+      }
+    </script>
+    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
