removed rawgit references

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="author" content="Dan Motzenbecker">
     <meta name="description" content="Cellf is a game of reflection in Clojure">
-    <link href="https://rawgit.com/dmotz/dmotz.github.com/master/assets/images/favicon.png" rel="icon" type="image/png">
-    <link href="https://rawgit.com/dmotz/dmotz.github.com/master/assets/images/favicon-152.png" rel="apple-touch-icon-precomposed">
+    <link href="/assets/images/favicon.png" rel="icon" type="image/png">
+    <link href="/assets/images/favicon-152.png" rel="apple-touch-icon-precomposed">
   </head>
   <body>
     <div id="app"></div>
@@ -16,7 +16,7 @@
     <script src="js/cellf.min.js"></script>
     <script>
       if (window.location.protocol !== 'https:' && window.location.hostname !== 'localhost') {
-        window.location.href = 'https://rawgit.com/dmotz/cellf/gh-pages/index.html';
+        window.location.href = 'https://oxism.com/cellf';
       }
     </script>
     <script>
