updated build from master 3743fefad15206210ff34cd1300d8f3194eac007

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css?0f29a3e436ba375ea2452965e34c36b9a2c4f5f5" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Cousine" rel="stylesheet" type="text/css">
     <title>Cellf</title>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
   <body>
     <div id="app"></div>
     <script src="js/gif.js"></script>
-    <script src="js/cellf.min.js"></script>
+    <script src="js/cellf.min.js?8366f8221fb6b6d28e09c6311dfeae7981efb56c"></script>
     <script>
       if (window.location.protocol !== 'https:' && window.location.hostname !== 'localhost') {
         window.location.href = 'https://oxism.com/cellf';
